
  - Added --input-encoding-error-handler option & setting.
  - Added command-line and config file support for "overrides" setting
    parameter.
  - Added --record-dependencies option & setting.

* docutils/io.py:

  - Added support for input encoding error handler.

* docutils/nodes.py:

  - Added dispatch_visit and dispatch_departure methods to
    NodeVisitor; useful as a hook for Visitors.

* docutils/parsers/rst/directives/__init__.py:

  - Added ``encoding`` directive option conversion function.

* docutils/parsers/rst/directives/misc.py:

  - Added "encoding" option to "include" and "raw" directives.

* docutils/parsers/rst/directives/parts.py:

  - Directive "sectnum" now accepts "prefix", "suffix", and "start"
    options.  Thanks to Lele Gaifax.

* docutils/parsers/rst/directives/tables.py:

  - Added "encoding" directive to "csv-table" directive.
  - Added workaround for lack of Unicode support in csv.py, for
    non-ASCII CSV input.

* docutils/transforms/misc.py:

  - Fixed bug when multiple "class" directives are applied to a single
    element.

* docutils/writers/html4css1.py:

  - HTMLTranslator.encode now converts U+00A0 to "&nbsp;".
  - "stylesheet" and "stylesheet_path" settings are now mutually
    exclusive.

* docutils/writers/latex2e.py:

  - no newline after depart_term.
  - Added unicode quotes u201C u201D.
  - Added ``\PreloadUnicodePage{n}`` to the header if in LaTeX code
    uses unicode.
  - Added option "font-encoding".
  - "stylesheet" and "stylesheet_path" settings are now mutually
    exclusive.


Release 0.3.5 (2004-07-29)
==========================

General:

* _`Documentation cleanup/reorganization`.

  - Created new subdirectories of docs/:

    * ``docs/user/``: introductory/tutorial material for end-users
    * ``docs/dev/``: for core-developers (development notes, plans, etc.)
    * ``docs/api/``: API reference material for client-developers
    * ``docs/ref/``: reference material for all groups